# felica-dumper

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  on_create.sh
felica_dumper/: __init__.py  cli.py
felica_dumper/core/: __init__.py  authentication.py  key_manager.py  service_processor.py  tag_reader.py
felica_dumper/models/: __init__.py  constants.py  key_info.py  service_result.py
felica_dumper/ui/: __init__.py  display.py  formatters.py  text_output.py
felica_dumper/utils/: __init__.py  helpers.py
